[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/scripts/main.gd" type="Script" id=1]
[ext_resource path="res://res/AppIcons/3310_newlogo_circle.png" type="Texture" id=2]
[ext_resource path="res://fonts/norwester.otf" type="DynamicFontData" id=3]
[ext_resource path="res://scenes/Level/effects/move_fx.tscn" type="PackedScene" id=4]

[sub_resource type="DynamicFont" id=1]
size = 41
outline_size = 1
outline_color = Color( 0.360784, 0.160784, 0.160784, 1 )
font_data = ExtResource( 3 )

[node name="main" type="Node2D"]
script = ExtResource( 1 )
dustEffect = ExtResource( 4 )

[node name="bg_color" type="ColorRect" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite_icon" type="Sprite" parent="."]
position = Vector2( 507, 267 )
scale = Vector2( 0.16154, 0.16154 )
z_index = 1
texture = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="tweenController" type="Tween" parent="."]

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 400.0
margin_top = 364.0
margin_right = 616.0
margin_bottom = 467.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "3310Games
"
align = 1
valign = 1
__meta__ = {
"_edit_lock_": true
}

[node name="move_fx_node_l" parent="." instance=ExtResource( 4 )]
visible = false
position = Vector2( 456, 291 )
scale = Vector2( 2, 2 )
z_index = 0
includePosTransaction = true

[node name="move_fx_node_r" parent="." instance=ExtResource( 4 )]
visible = false
position = Vector2( 559, 291 )
scale = Vector2( 2, 2 )
z_index = 0
includePosTransaction = true

[node name="move_fx_node_l3" parent="." instance=ExtResource( 4 )]
visible = false
position = Vector2( 456, 291 )
scale = Vector2( 2, 2 )
z_index = 0
includePosTransaction = true

[node name="move_fx_node_r3" parent="." instance=ExtResource( 4 )]
visible = false
position = Vector2( 559, 291 )
scale = Vector2( 2, 2 )
z_index = 0
includePosTransaction = true

[node name="move_fx_node_l2" parent="." instance=ExtResource( 4 )]
visible = false
position = Vector2( 485, 290 )
scale = Vector2( 2, 2 )
z_index = 0
includePosTransaction = true

[node name="move_fx_node_r2" parent="." instance=ExtResource( 4 )]
visible = false
position = Vector2( 529, 290 )
scale = Vector2( 2, 2 )
z_index = 0
includePosTransaction = true

[connection signal="tween_completed" from="tweenController" to="." method="_on_Tween_tween_completed"]
[connection signal="tween_started" from="tweenController" to="." method="_on_Tween_tween_started"]
